<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneverificationmsg"
            android:textSize="25sp"
            android:padding="10dp"
            android:textStyle="bold|italic"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText

            android:id="@+id/phoneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:gravity="center" />

        <Button

            android:id="@+id/sendButton"
            android:onClick="sendCode"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/buttonColor"
            android:padding="5dp"
            android:text="SEND CODE"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="#000"
            android:textSize="19dp" />

        <TextView

            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/resendCodemsg"/>

        <Button

            android:id="@+id/resendButton"
            android:onClick="resendCode"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/buttonColor"
            android:padding="5dp"
            android:text="RESEND CODE"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="#000"
            android:textSize="19dp" />
    </LinearLayout>

    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText

                android:id="@+id/codeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter the code"
                android:gravity="center" />

            <Button

                android:id="@+id/verifyButton"
                android:onClick="verifyCode"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/buttonColor"
                android:padding="5dp"
                android:text="VERIFY CODE"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="#000"
                android:textSize="19dp" />

    </LinearLayout>
</LinearLayout>